[fix]必要要件をjava 11、mc 1.13以上に引き下げ