@@ -10,6 +10,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class CommandManager implements CommandExecutor, TabCompleter {
     private final Map<String, BaseCommand> commands;
@@ -29,9 +30,9 @@ public class CommandManager implements CommandExecutor, TabCompleter {
         // サブコマンドが存在しない
         if (subCommand == null) return false;
 
-        if (sender instanceof Player player && !subCommand.checkPermission(player)) {
+        if (sender instanceof Player && !subCommand.checkPermission((Player) sender)) {
             //権限無し
-            player.sendMessage(ChatColor.RED + "権限が不足しています！");
+            sender.sendMessage(ChatColor.RED + "権限が不足しています！");
             return true;
         }
 
@@ -45,11 +46,12 @@ public class CommandManager implements CommandExecutor, TabCompleter {
         List<BaseCommand> subCommandSuggestions = new ArrayList<>();
         for (var registeredCommand : commands.values()) {
             if (!registeredCommand.getName().startsWith(args[0])) continue;
-            if (sender instanceof Player player && !registeredCommand.checkPermission(player)) continue;
+            if (sender instanceof Player && !registeredCommand.checkPermission((Player) sender)) continue;
             subCommandSuggestions.add(registeredCommand);
         }
 
-        if (args.length == 1) return subCommandSuggestions.stream().map(BaseCommand::getName).toList();
+        if (args.length == 1)
+            return subCommandSuggestions.stream().map(BaseCommand::getName).collect(Collectors.toList());
         var subCommandArgs = Arrays.copyOfRange(args, 1, args.length);
 
         List<String> argumentsSuggestions = new ArrayList<>();
